--- a/package.json
+++ b/package.json
@@ -1,17 +1,20 @@
 {
-  "name": "Module-1",
+  "name": "module-1",
   "version": "1.0.0",
   "description": "Individual Project for Module 1",
   "main": "main.js",
   "type": "module",
   "scripts": {
-    "test": "jest"
+    "test": "jest --coverage"
   },
   "keywords": [],
   "author": "Jian Jaico",
   "license": "ISC",
   "dependencies": {
     "@babel/preset-env": "^7.19.1",
-    "jest": "^29.0.3"
+    "jest": "^29.3.1"
+  },
+  "devDependencies": {
+    "jest-sorted": "^1.0.14"
   }
 }
